--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://meghanar2205.github.io/amazoncloneshoppingapp",
+  "homepage": "https://github.com/meghanar2205/amazoncloneshoppingapp.git",
   "name": "amazon-eshop-app",
   "version": "0.1.0",
   "private": true,
